--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,9 @@
     --sixth-color:#404BBF;
     --seventh-color:#434455;
     --theme-color: #2E2F42;
+    --hero-cover: rgba(46, 47, 66, 0.70);
+    --eight-color: #8E8F99;
 }
-
 h1,h2,h3,h4,h5,h6,p { margin: 0;}
 html { box-sizing: border-box;}
 *,*::after,*::before { box-sizing: inherit;}
@@ -64,6 +65,8 @@ body {
 }
 .hero-image {
     background-color: var(--theme-color);
+    background-blend-mode: overlay;
+    background-image: url("../images/people-office.jpg");
     color: var(--secondary-color);
 }
 .hero-top-banner{
@@ -72,7 +75,6 @@ body {
     line-height: 60px;
     letter-spacing: 1.12px;
     text-align: center;
-
     display: flex;
     flex-direction: column;
 }
@@ -96,6 +98,7 @@ body {
     letter-spacing: 0.4px;
 }
 .feat-desc {
+    margin-top: 8px;
     color:var(--seventh-color);
     line-height: 24px;
 }
@@ -136,7 +139,14 @@ body {
     background-color: var(--fouth-color);
     border: 1px solid var(--fifth-color);
 
+    cursor: pointer;
     padding: 12px 24px;
+}
+.proj-cardlist {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: inherit;
 }
 .card-text{
     margin-top: 8px;
@@ -172,6 +182,18 @@ body {
 .filters .filter-btn.active {
     color: var(--secondary-color);
     background-color: var(--third-color);
+}
+.socmed-icon:hover,
+.socmed-icon:focus {
+    background-color: var(--sixth-color);
+}
+.socmed-icon:active {
+    background-color: var(--third-color);
+}
+.client-list:hover,
+.client-list:focus  {
+    border-color: var(--sixth-color);
+    fill: var(--sixth-color);
 }
 .centered-list {
     margin: 0 auto;
@@ -282,4 +304,61 @@ body {
 }
 .footer-text {
     margin-top: 18px;
+}
+.container-footer {
+    display: flex;
+    justify-content: left;
+    gap: 120px;
+}
+.footer-box {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+}
+/* social media link icon etc. */
+.feat-icon {
+    margin-bottom: 8px;
+    width: 264px;
+    height: 112px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    display: flex;
+    background-color: var(--fouth-color);
+}
+.socmed-list{
+    display: flex;
+    gap: 16px;
+}
+.icon-socmed {
+    height: 16px;
+    width: 16px;
+}
+.socmed-icon{
+    display: flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: var(--third-color);
+}
+.icon {
+    display: inline-block;
+    stroke-width: 0;
+    stroke: currentColor;
+}
+.icon-client {
+    width: 104px;
+    height: 56px;
+}
+.client-list {
+    display: flex;
+    width: 168px;
+    height: 88px;
+    align-items: center;
+    justify-content: center;
+    fill: var(--eight-color);
+    border-radius: 4px;
+    border: 1px solid var(--eight-color);
 }
