--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
 .hero-image {
     background-color: var(--theme-color);
     background-blend-mode: overlay;
-    background-image: url("../images/people-office.jpg");
+    background-image: url("../images/people-office-1.jpg");
     color: var(--secondary-color);
 }
 .hero-top-banner{
